--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ env:
 before_install:
   - npm install -g npm@~1.4.6
   - openssl aes-256-cbc -K $encrypted_32dc99eaf549_key -iv $encrypted_32dc99eaf549_iv -in id_rsa.enc -out id_rsa -d
+  - chmod 600 id_rsa
 after_success:
   - bash travis-after-success.sh
