--- a/site/package.json
+++ b/site/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "nib",
-  "description": "",
+  "name": "nib-website",
+  "description": "Nib's website",
+  "private": true,
+  "scripts": {
+    "build": "roots analytics --disable ; roots compile -e production"
+  },
   "dependencies": {
     "autoprefixer-stylus": "0.6.x",
     "axis": "0.4.x",
@@ -9,6 +13,7 @@
     "jade": "1.x",
     "js-pipeline": "0.2.x",
     "marked": "0.3.x",
+    "roots": "^3.1.0",
     "rupture": "0.6.x",
     "stylus": "0.51.x"
   }
